# trialrepo

./: README.md  pyproject.toml  setup.cfg
src/trialrepo/: proc.py
tests/: test_proc.py
tests/test_data/db/: data.xlsx  patient_000.json  patient_001.json  patient_002.json  patient_003.json  patient_004.json  patient_005.json  patient_006.json  patient_007.json  patient_008.json  patient_009.json  validate_000.json  validate_001.json  validate_007.json
