[metadata]
name = trialrepo
description = repo to trial python packaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sjoerdvos/dmwl
author = Sjoerd Vos
author_email = sjoerd.vos@uwa.edu.au
license = MIT
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	License :: OSI Approved :: MIT License
	Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir =
	= src
packages = find:
install_requires =
    numpy == 1.20.3
    pandas == 1.3.4
include_package_data = True

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts = 
	sv_tr_json = trialrepo.proc:convert_json_to_dcm_format
	sv_tr_main = trialrepo.proc:main

[egg_info]
tag_build = 
tag_date = 0